# macrograph-rs

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  workspace.code-workspace
app/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/src/: App.tsx  index.css  index.d.ts  main.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs  menu.rs  packages.rs
app/src/components/Graph/: Graph.tsx  Node.tsx  SchemaMenu.tsx  index.ts
app/src/components/Graph/Connection/: ConnectionRenderer.tsx
app/src/components/Graph/IO/: DataInput.tsx  DataOutput.tsx  DataPin.tsx  ExecInput.tsx  ExecOutput.tsx  index.ts
app/src/components/ProjectSidebar/: GraphItem.tsx  index.tsx
app/src/components/ui/: CheckBox.tsx  FloatInput.tsx  IntInput.tsx  TextInput.tsx  index.ts
app/src/contexts/: Core.tsx  CurrentGraph.tsx  Node.tsx  index.ts
app/src/hooks/: pin.ts
app/src/models/: Core.ts  Graph.ts  IO.ts  Node.ts  NodeSchema.ts  Package.ts  Pin.ts  index.ts
app/src/stores/: UI.ts  index.ts
app/src/utils/: actions.ts  api.ts  index.ts  pins.ts
core/: Cargo.toml  index.ts
core/bindings/: Input.ts  ListType.ts  Node.ts  NodeSchema.ts  NodeSchemaType.ts  Output.ts  Request.ts  Response.ts
core/package-api/: Cargo.toml  index.ts
core/package-api/src/: engine.rs  io.rs  lib.rs  package.rs  schema.rs  types.rs  value.rs
core/package-api/src/value/: list.rs  mod.rs  primitive.rs  types.rs
core/runtime/: Cargo.toml  package.json
core/runtime/src/: core.rs  graph.rs  lib.rs
core/runtime/src/api/: io.rs  mod.rs  package.rs
core/src/: core.rs  engine.rs  graph.rs  io.rs  lib.rs  node.rs  package.rs  schema.rs  types.rs  value.rs
core/src/api/: graph.rs  io.rs  mod.rs  node.rs  package.rs  schema.rs
core/types/: Cargo.toml
core/types/bindings/: Input.ts  Request.ts  Response.ts  Value.ts
core/types/src/: engine.rs  graph.rs  io.rs  lib.rs  node.rs  package.rs  schema.rs  types.rs  value.rs
core/types/src/api/: io.rs  mod.rs  node.rs  schema.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/core/: engine.rs  io.rs  mod.rs  node.rs  package.rs  schema.rs  types.rs  value.rs
