[package]
name = "macrograph"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macrograph"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
futures = "0.3.17"
tokio = {version="1.12.0", features= ["macros"] }
reqwest = "0.11.6"
rdev = { git = "https://github.com/Brendonovich/rdev", features = ["macos_noloop"] }
async-trait = "0.1.51"
swift-rs = "0.1.0"
midir = "0.7.0"
