[package]
name = "macrograph"
version = "0.0.0"
edition = "2021"
description = "Flow based programming framework for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macrograph"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["macros", "sync"] }
