[package]
name = "macrograph"
version = "0.0.0"
edition = "2021"
description = "Flow based programming framework for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macrograph-package-api = { path = "package-api" }
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive", "rc"] }
futures = "0.3.17"
tokio = { version = "1.16.1", features = ["sync", "rt", "rt-multi-thread"] }
ts-rs = {git = "https://github.com/Brendonovich/ts-rs", branch = "main"}
oneshot = "0.1.3"
weak-table = "0.3.2"
arc-swap = "1.5.0"
libloading = "0.7.3"
