[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.0.0-beta.4"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
futures = "0.3.17"
tokio = {version="1.12.0", features= ["macros"] }
reqwest = "0.11.6"
macrograph-packages = { path = "../../packages" }
macrograph-core = { path = "../../core" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
