[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.0.0-beta.4"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
futures = "0.3.17"
tokio = { version = "1.16.1", features = ["macros","rt", "rt-multi-thread"] }
reqwest = "0.11.6"
macrograph-core = { path = "../../core/runtime" }

# mg-pkg-keyboard = { path = "../../packages/keyboard" }
# mg-pkg-logic = { path = "../../packages/logic" }
# mg-pkg-midi= { path = "../../packages/midi" }
# mg-pkg-obs = { path = "../../packages/obs" }
# mg-pkg-utils = { path = "../../packages/utils" }
simple_logger = "2.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
