[package]
name = "macrograph-package-api"
version = "0.0.0"
edition = "2021"
description = "Flow based programming framework for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macrograph_package_api"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive", "rc"] }
futures = "0.3.17"
tokio = {version = "1.16.1", features = ["sync", "rt", "rt-multi-thread"] }
ts-rs = "6.1.0"
