[package]
name = "macrograph-core-types"
version = "0.0.0"
edition = "2021"
description = "Flow based programming framework for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macrograph_core_types"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive", "rc"] }
futures = "0.3.17"
tokio = { version = "1.15.0", features = ["sync", "rt"] }
ts-rs = "6.1.0"
oneshot = "0.1.3"
weak-table = "0.3.2"
arc-swap = "1.5.0"
async-trait = "0.1.52"
